--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "My Blogs Name"
+title: "NCSU ST558 Course Blog"
 author: "Chien-Lan Hsueh"
 description: "NCSU ST588 (Summer 2022) Blog" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
