--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "NCSU ST558 Course Blog"
+title: "NCSU ST558 Blog"
 author: "Chien-Lan Hsueh"
-description: "NCSU ST588 (Summer 2022) Course Blog" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "CLHsueh's NCSU ST558 (Summer 2022) Course Blog" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
