--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: "NCSU ST558 Blog"
+title: "Chien-Lan's Blog"
 author: "Chien-Lan Hsueh"
-description: "CLHsueh's NCSU ST558 (Summer 2022) Course Blog" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Chien-Lan's Blog" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "chsueh2@ncsu.edu"
+email: "chienlan.hsueh@gmail.com"
 #twitter_username: "twitteruser"
 github_username: "chsueh2"
 #linkedin_username: "linkedinuser"
